# ifstat

./: HISTORY  Makefile.in  README  TODO  acconfig.h  autogen.sh  config.h.in  configure  configure.in  data.c  drivers.c  ifstat.1  ifstat.c  ifstat.h  ifstat.pod  ifstat.spec  libifstat-config.1  libifstat-config.in  snmp.c  snmp.h
debian/: changelog  control  copyright  docs  ifstat.files  libifstat-dev.files  libifstat-dev.undocumented  rules
